# hedera-cryptography

./: .gitignore  .releaserc  .sdkmanrc  README.md  acknowledgments.html  build.gradle.kts  gradle.properties  old.settings.gradle.kts  package.json  settings.gradle.kts  version.txt
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/: Cargo.toml
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/: lib.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/arith/: mod.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/arith/r1cs/: mod.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/commitment/: mod.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/folding/: traits.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/folding/circuits/: mod.rs  utils.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/folding/nova/: decider.rs
cryptography/hedera-cryptography-WRAPS/src/main/rust/folding-schemes/src/utils/: mod.rs  vec.rs
cryptography/hedera-cryptography-altbn128/: Cargo.toml  build.gradle.kts  compile.sh  how-to.md  readme.md  rust-toolchain.toml
cryptography/hedera-cryptography-altbn128/src/jmh/java/com/hedera/cryptography/altbn128/: FieldElementEqualityAndHashCodeBenchmark.java  GroupElementEqualityAndHashCodeBenchmark.java  GroupElementMbcVsHorner.java  GroupElementsBenchmark.java
cryptography/hedera-cryptography-altbn128/src/main/java/: module-info.java
cryptography/hedera-cryptography-altbn128/src/main/java/com/hedera/cryptography/altbn128/: AltBN128CurveGroup.java  AltBn128.java  AltBn128BilinearPairing.java  AltBn128Exception.java  AltBn128Field.java  AltBn128FieldElement.java  AltBn128Group.java  AltBn128Group1.java  AltBn128Group2.java  AltBn128Group2Element.java  AltBn128GroupElement.java  ArkworksSerialization.java  ArkworksSerializationInfo.java  ElementInfo.java  Foo.java  SerializationInfo.java
cryptography/hedera-cryptography-altbn128/src/main/resources/services/: com.hedera.cryptography.pairings.spi.BilinearPairingProvider
cryptography/hedera-cryptography-altbn128/src/main/resources/software/darwin/amd64/: libbn254.dylib
cryptography/hedera-cryptography-altbn128/src/main/resources/software/darwin/arm64/: libbn254.dylib
cryptography/hedera-cryptography-altbn128/src/main/rust/: Cargo.toml  alt_bn128_field_elements.rs  bn254_field_elements.rs  bn254_group_elements.rs  bn254_pairings.rs  bn254_random.rs  bn254_to_wrap.rs  group_element_utils.rs  jni_helpers.rs  lib.rs  pairings_api.rs  pairings_utils.rs  scalars_utils.rs
cryptography/hedera-cryptography-altbn128/src/test/java/com/hedera/cryptography/altbn128/: AltBn128BilinearPairingTest.java  AltBn128FieldElementTest.java  AltBn128FieldTest.java  AltBn128Group2FacadeTest.java  AltBn128Group2Test.java  AltBn128GroupElementTest.java  AltBn128GroupTest.java  AltBn128Test.java  ArkworksSerializationInfoTest.java  ArkworksSerializationTest.java  ArkworksSerializationTests.java  ElementInfoTest.java  SerializationInfoTest.java  SerializationTests.java
cryptography/hedera-cryptography-altbn128/src/testFixtures/java/: module-info.java
cryptography/hedera-cryptography-altbn128/src/testFixtures/resources/: altbn128_ext_data.json
cryptography/hedera-cryptography-altbn128/src/testFixtures/sage/: generate_refs.sage  small_subgroup.sage  svdw.sage
cryptography/hedera-cryptography-altbn128/testFixtures/sage/: utils.sage
cryptography/hedera-cryptography-blsKeyGen/src/main/rust/: Cargo.toml  key_gen.rs
cryptography/hedera-cryptography-hinTS/: Cargo.toml  build.gradle.kts
cryptography/hedera-cryptography-hinTS/src/main/java/: module-info.java
cryptography/hedera-cryptography-hinTS/src/main/java/com/hedera/cryptography/hints/: Dummy.java  HintsLibraryBridge.java
cryptography/hedera-cryptography-hinTS/src/main/rust/: errors.rs  hints.rs  jni_crs.rs  jni_hints.rs  jni_util.rs  kzg.rs  lib.rs  setup.rs  utils.rs
cryptography/hedera-cryptography-hinTS/src/test/java/com/hedera/cryptography/hints/: HintsConstants.java  HintsLibraryBridgeCRSTest.java  (+1 more)
cryptography/hedera-cryptography-rpm/: Cargo.toml  build.gradle.kts  rust-toolchain.toml
cryptography/hedera-cryptography-rpm/src/main/java/: module-info.java
cryptography/hedera-cryptography-rpm/src/main/resources/: ab-rotation-program  raps-compression-program
cryptography/hedera-cryptography-rpm/src/main/rust/: Cargo.toml  lib.rs
cryptography/hedera-cryptography-rpm/src/main/rust/common/: Cargo.toml
cryptography/hedera-cryptography-rpm/src/main/rust/compressor/: Cargo.toml
cryptography/hedera-cryptography-rpm/src/main/rust/compressor/src/: main.rs
cryptography/hedera-cryptography-rpm/src/main/rust/raps/: Cargo.toml
cryptography/hedera-cryptography-rpm/src/main/rust/raps/src/: jni_history.rs  jni_util.rs  lib.rs  raps.rs
cryptography/hedera-cryptography-rpm/src/main/rust/zkvm_program/: Cargo.toml
cryptography/hedera-cryptography-rpm/src/main/rust/zkvm_program/elf/: ab-rotation-program
cryptography/hedera-cryptography-rpm/src/main/rust/zkvm_program/src/: main.rs
cryptography/hedera-cryptography-wraps/src/main/rust/ceremony/: Cargo.toml
cryptography/hedera-cryptography-wraps/src/main/rust/ceremony/scripts/: run_sample_ceremony.sh
cryptography/hedera-cryptography-wraps/src/main/rust/ceremony/src/: main.rs
cryptography/hedera-cryptography-wraps/src/main/rust/wraps/: Cargo.toml
cryptography/hedera-cryptography-wraps/src/main/rust/wraps/src/: alloc.rs  jni_util.rs  jni_wraps.rs  lib.rs  preprocessing.rs  utils.rs
cryptography/hedera-cryptography-wraps/src/main/rust/wraps/src/alloc/: bitmap.rs  filemap.rs
cryptography/hedera-cryptography-wraps/src/main/rust/wraps/src/random_oracle/: constraints.rs  mod.rs
cryptography/hedera-cryptography-wraps/src/main/rust/wraps/src/signature/: constraints.rs  mod.rs
rust-library-interface/: Cargo.toml  build.sh
rust-library-interface/src/: common.rs  g1.rs  lib.rs  pairing.rs  scalar.rs
(+733 files in other folders)
