[package]
name = "pairings_jni_rust"
version = "0.1.0"
edition = "2021"

[dependencies.subtle]
version = "2.4.1"
default-features = false

[dependencies]
jni = "0.17.0"
bls12_381 = { version = "0.7.0" }
ff = "0.12.0"
group = "0.12.0"
rand_chacha = "0.3.1"
rand_core = "0.6.3"

[lib]
name = "pairings_jni_rust"
crate_type = ["cdylib"]
