[workspace]
members = [
    "src/main/rust/common",
    "src/main/rust/raps",
    # The cross-compilation of the compressor requires a non-trivial environment setup,
    # so we build the compressor manually in the build.gradle.kts instead:
    #"src/main/rust/compressor"
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["deref"] }
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = { version = "^0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde-hex = "0.1.0"
sha2 = "0.10.8"
smallvec = { version = "1.13", features = ["const_generics", "serde"] }

# sp1 5.2.1 fails to build some of its dependencies, so for now we stick to 5.1.0.
# Also, we use our custom fork with https://github.com/succinctlabs/sp1/pull/2418 applied.
# Once the PR is merged into sp1 and released officially, and the build issues of the sp1 dependencies are resolved,
# then we can switch back to using official sp1 releases:
sp1-sdk = { version = "5.1.0", git = "https://github.com/anthony-swirldslabs/sp1", branch = "go-build-config-5.1.0", default-features = false }
sp1-zkvm = { version = "5.1.0" }
sp1-verifier = { version = "5.1.0" }

ab-rotation-lib = { path = "src/main/rust/common" }
raps = { path = "src/main/rust/raps" }

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "sha2-v0.10.8-patch-v1" }
curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "curve25519_dalek-v4.1.3-patch-v1" }

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
panic = "abort"
lto = "fat"
strip = true
debug = false
opt-level = 3
codegen-units = 1
