[package]
version = "0.1.0"
name = "compressor"
edition = "2021"

# The empty [workspace] is here by design because we build the compressor from Gradle using Cargo directly,
# but we cannot add it to the main workspace because Gradle wouldn't be able to build it via zig
# So it needs to "look" like its own workspace here
[workspace]

# These [workspace.dependencies] are replicated from the main workspace so that Cargo can see them
[workspace.dependencies]
alloy-sol-types = "0.8"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["deref"] }
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = { version = "^0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde-hex = "0.1.0"
sha2 = "0.10.8"
smallvec = { version = "1.13", features = ["const_generics", "serde"] }
sp1-sdk = { version = "5.0.8", git = "https://github.com/anthony-swirldslabs/sp1", branch = "go-build-config", default-features = false }
sp1-zkvm = { version = "4.1.0" }
sp1-verifier = { version = "4.1.0" }

ab-rotation-lib = { path = "src/main/rust/common" }
raps = { path = "src/main/rust/raps" }

[dependencies]
ab-rotation-lib = { path = "../common" }
#sp1-sdk = { version = "4.1.0", default-features = false, features = ["native-gnark"] }
#sp1-sdk = { path = "/Users/anthony/ws/61-crypto/sp1/crates/sdk", default-features = false, features = ["native-gnark"] }
sp1-sdk = { version = "5.0.8", git = "https://github.com/anthony-swirldslabs/sp1", branch = "go-build-config", default-features = false, features = ["native-gnark"] }
byteorder = "1.4"
alloy-sol-types = { workspace = true }
bincode = { workspace = true }

[features]
default = []
