[package]
version = "0.1.0"
name = "compressor"
edition = "2021"

# The empty [workspace] is here by design because we build the compressor from Gradle using Cargo directly,
# but we cannot add it to the main workspace because Gradle wouldn't be able to build it via zig
# So it needs to "look" like its own workspace here
[workspace]

# These [workspace.dependencies] are replicated from the main workspace so that Cargo can see them
[workspace.dependencies]
alloy-sol-types = "0.8"
bincode = "1.3.3"
derive_more = { version = "1.0.0", features = ["deref"] }
ed25519-dalek = { version = "2.1.1", features = ["serde", "rand_core"] }
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = { version = "^0.3.0" }
serde = { version = "1.0", features = ["derive"] }
serde-big-array = "0.5.1"
serde-hex = "0.1.0"
sha2 = "0.10.8"
smallvec = { version = "1.13", features = ["const_generics", "serde"] }

# sp1 5.2.1 fails to build some of its dependencies, so for now we stick to 5.1.0.
# Also, we use our custom fork with https://github.com/succinctlabs/sp1/pull/2418 applied.
# Once the PR is merged into sp1 and released officially, and the build issues of the sp1 dependencies are resolved,
# then we can switch back to using official sp1 releases:
sp1-sdk = { version = "5.1.0", git = "https://github.com/anthony-swirldslabs/sp1", branch = "go-build-config-5.1.0", default-features = false }
sp1-zkvm = { version = "5.1.0" }
sp1-verifier = { version = "5.1.0" }

ab-rotation-lib = { path = "src/main/rust/common" }
raps = { path = "src/main/rust/raps" }

[dependencies]
ab-rotation-lib = { path = "../common" }

# sp1 5.2.1 fails to build some of its dependencies, so for now we stick to 5.1.0.
# Also, we use our custom fork with https://github.com/succinctlabs/sp1/pull/2418 applied.
# Once the PR is merged into sp1 and released officially, and the build issues of the sp1 dependencies are resolved,
# then we can switch back to using official sp1 releases:
sp1-sdk = { version = "5.1.0", git = "https://github.com/anthony-swirldslabs/sp1", branch = "go-build-config-5.1.0", default-features = false, features = ["native-gnark"] }

byteorder = "1.4"
alloy-sol-types = { workspace = true }
bincode = { workspace = true }

[features]
default = []
