[package]
version = "0.1.0"
name = "ab-rotation-program"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
sp1-zkvm = { workspace = true, features = ["verify"] }
ab-rotation-lib = { workspace = true }
openssl = { version = "0.10", features = ["vendored"] }

[features]
default = []
