[package]
name = "ceremony"
version = "0.1.0"
edition.workspace = true


[dependencies]
clap = { version = "4", features = ["derive"] }
ark-ec = { workspace = true }
ark-ff = { workspace = true, features = ["asm"] }
ark-poly = { workspace = true }
ark-std = { workspace = true, features = ["getrandom"] }
ark-crypto-primitives = { workspace = true, features = ["constraints", "sponge", "crh", "prf"] }
ark-poly-commit = { workspace = true }
ark-relations = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-snark = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true }
ark-bn254 = { workspace = true, features = ["r1cs"] }
ark-ed-on-bn254 = { workspace = true, features = ["r1cs"] }
ark-grumpkin = { workspace = true, features = ["r1cs"] }
jni = "0.21.1"
memmap2 = "0.9.9"
rayon = { version = "1.10.0" }
sha3 = { workspace = true }
blake2 = { workspace = true }
digest = { workspace = true }

wraps = { path = "../wraps" }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3